[workspace]
resolver = "2"
members = [
    "crates/vsql-sync-core",
    "crates/vsql-sync-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.23"
tokio-rustls = "0.26"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
thiserror = "1"
rustls-pemfile = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower = "0.5"
