[package]
name = "vsql-sync-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
